@@ -5,6 +5,7 @@ import java.time.temporal.ChronoUnit;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -63,9 +64,6 @@ public class OfflineEdgeHandler implements Handler<OfflineEdgeMessage> {
 
 	@Override
 	public void send(ZonedDateTime sentAt, List<OfflineEdgeMessage> pack) {
-		// Ensure Edge is still offline before sending mail.
-		pack.removeIf((msg) -> !this.isEdgeOffline(msg.getEdgeId()));
-
 		var params = JsonUtils.generateJsonArray(pack, OfflineEdgeMessage::getParams);
 
 		this.mailer.sendMail(sentAt, OfflineEdgeMessage.TEMPLATE, params);
@@ -79,7 +77,7 @@ public class OfflineEdgeHandler implements Handler<OfflineEdgeMessage> {
 	}
 
 	private void tryReschedule(OfflineEdgeMessage msg) {
-		if (msg.update()) {
+		if (msg.update() && this.isEdgeOffline(msg.getEdgeId())) {
 			this.msgScheduler.schedule(msg);
 		}
 	}
@@ -94,12 +92,12 @@ public class OfflineEdgeHandler implements Handler<OfflineEdgeMessage> {
 
 	private void checkMetadata() {
 		this.log.info("[OfflineEdgeHandler] check Metadata for Offline Edges");
-
+		
 		var msgs = new LinkedList<OfflineEdgeMessage>();
 		var count = new AtomicInteger();
 		var validOfflineEges = this.metadata.getAllOfflineEdges().stream() //
 				.filter(this::isValidEdge) //
-				.toList();
+				.collect(Collectors.toList());
 
 		if (validOfflineEges.size() > OfflineEdgeHandler.MAX_SIMULTANEOUS_EDGES) {
 			this.log.error("[OfflineEdgeHandler] Canceled checkMetadata(); tried to schedule msgs for "
@@ -187,14 +185,26 @@ public class OfflineEdgeHandler implements Handler<OfflineEdgeMessage> {
 		return nextMailRecieveAt.isAfter(lastMailRecievedAt);
 	}
 
-	protected void tryRemoveEdge(Edge edge) {
-		this.msgScheduler.remove(edge.getId());
+	/**
+	 * Handler for when the Edge.OnSetOnline Event was thrown.
+	 *
+	 * @param reader Reader for Event parameters
+	 */
+	private void handleEdgeOnSetOnline(EventReader reader) {
+		var edge = (Edge) reader.getProperty(Edge.Events.OnSetOnline.EDGE);
+		var isOnline = reader.getBoolean(Edge.Events.OnSetOnline.IS_ONLINE);
+		if (isOnline) {
+			this.msgScheduler.remove(edge.getId());
+		} else {
+			this.tryAddEdge(edge);
+		}
 	}
 
 	protected void tryAddEdge(Edge edge) {
 		if (this.isValidEdge(edge)) {
 			var msg = this.getEdgeMessage(edge);
 			if (msg != null) {
+				this.log.info("Schedule Alerting-Message " + msg.toString());
 				this.msgScheduler.schedule(msg);
 			}
 		}
@@ -210,7 +220,7 @@ public class OfflineEdgeHandler implements Handler<OfflineEdgeMessage> {
 		} else {
 			this.initMetadata = new Runnable() {
 				final ZonedDateTime checkAt = ZonedDateTime.now().plusMinutes(OfflineEdgeHandler.this.initialDelay);
-
+				
 				@Override
 				public void run() {
 					if (ZonedDateTime.now().isAfter(this.checkAt)) {
@@ -225,32 +235,15 @@ public class OfflineEdgeHandler implements Handler<OfflineEdgeMessage> {
 	}
 
 	@Override
-	public Runnable getEventHandler(EventReader event) {
+	public void handleEvent(EventReader event) {
 		switch (event.getTopic()) {
 		case Edge.Events.ON_SET_ONLINE:
-			var edgeId = event.getString(Edge.Events.OnSetOnline.EDGE_ID);
-			var isOnline = event.getBoolean(Edge.Events.OnSetOnline.IS_ONLINE);
-			return () -> {
-				var edgeOpt = this.metadata.getEdge(edgeId);
-				edgeOpt.ifPresentOrElse((edge) -> {
-					// Ensure that the online-state has not changed
-					if (edge.isOnline() == isOnline) {
-						if (isOnline) {
-							this.tryRemoveEdge(edge);
-						} else {
-							this.tryAddEdge(edge);
-						}
-					}
-				}, () -> {
-					this.log.warn("Edge with id: " + edgeId + " not found");
-				});
-			};
+			this.handleEdgeOnSetOnline(event);
+			break;
 
 		case Metadata.Events.AFTER_IS_INITIALIZED:
-			return this::handleMetadataAfterInitialize;
-
-		default:
-			return null;
+			this.handleMetadataAfterInitialize();
+			break;
 		}
 	}
 
